# agent-safe

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  inventory.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
actions/: apply-network-policy.yaml  cordon-node.yaml  create-namespace.yaml  delete-namespace.yaml  delete-pod.yaml  drain-node.yaml  ec2-reboot-instance.yaml  ec2-start-instance.yaml  ec2-stop-instance.yaml  ec2-terminate-instance.yaml  ecs-scale-service.yaml  ecs-stop-task.yaml  ecs-update-service.yaml  exec-pod.yaml  get-configmap.yaml  get-pod-logs.yaml  get-secret.yaml  iam-attach-role-policy.yaml  iam-detach-role-policy.yaml  lambda-invoke-function.yaml  lambda-update-function-config.yaml  port-forward.yaml  restart-deployment.yaml  rollout-status.yaml  rollout-undo.yaml  s3-delete-object.yaml  s3-put-bucket-policy.yaml  scale-deployment.yaml  scale-hpa.yaml  uncordon-node.yaml  update-configmap.yaml  update-hpa-limits.yaml  update-image.yaml
dashboard/: __init__.py
dashboard/backend/: __init__.py  app.py  config.py  schemas.py
dashboard/backend/alerts/: engine.py  models.py  service.py
dashboard/backend/auth/: __init__.py  dependencies.py  models.py  service.py  sso_service.py  tier.py
dashboard/backend/clusters/: __init__.py  models.py  service.py
dashboard/backend/db/: __init__.py  connection.py  migrations.py
dashboard/backend/managed_policies/: models.py  service.py
dashboard/backend/reports/: __init__.py  models.py  service.py
dashboard/backend/routers/: actions.py  activity.py  alerts.py  audit.py  auth.py  clusters.py  health.py  policies.py  reports.py  sso.py  users.py
dashboard/backend/services/: __init__.py  action_service.py  activity_service.py  audit_service.py  policy_service.py
dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/frontend/src/: App.tsx  main.tsx
dashboard/frontend/src/api/: client.ts  hooks.ts
dashboard/frontend/src/auth/: AuthContext.tsx  LoginPage.tsx  ProtectedRoute.tsx  SSOCallbackPage.tsx
dashboard/frontend/src/components/: AlertRuleEditor.tsx  Layout.tsx  Pagination.tsx  PolicyEditor.tsx  RiskBadge.tsx  StatsCard.tsx  StatusBadge.tsx
dashboard/frontend/src/pages/: ActionDetail.tsx  Actions.tsx  Activity.tsx  Alerts.tsx  Audit.tsx  Clusters.tsx  Dashboard.tsx  (+3 more)
docs/: ARCHITECTURE.md  CREDENTIAL-SCOPING.md  FUTURE-BACKLOG.md  GETTING-STARTED.md  MVP-PLAN.md  ROADMAP.md  THREAT-MODEL.md  WRITING-ACTIONS.md  WRITING-POLICIES.md
examples/: claude_agent_demo.py  demo_agent.py  demo_approval_workflow.py  demo_cumulative_risk.py  demo_delegation.py  demo_execution_pipeline.py  demo_rate_limit.py
infra/: docker-compose.yaml  k8s-bootstrap.yaml  kind-config.yaml  setup.sh  teardown.sh
policies/: default.yaml
src/agent_safe/: __init__.py  config.py  models.py
src/agent_safe/approval/: notifier.py  store.py
src/agent_safe/audit/: dashboard_shipper.py  differ.py  logger.py  shipper.py
src/agent_safe/cli/: main.py
src/agent_safe/credentials/: __init__.py  env_vault.py  resolver.py  vault.py
src/agent_safe/identity/: manager.py
src/agent_safe/inventory/: loader.py
src/agent_safe/pdp/: engine.py  risk_tracker.py
src/agent_safe/ratelimit/: limiter.py
src/agent_safe/registry/: loader.py
src/agent_safe/rollback/: __init__.py  planner.py
src/agent_safe/runner/: __init__.py  aws_executor.py  executor.py  k8s_executor.py  runner.py  subprocess_executor.py
src/agent_safe/sdk/: client.py
src/agent_safe/sync/: policy_sync.py
src/agent_safe/testing/: runner.py
src/agent_safe/tickets/: issuer.py  validator.py
tests/: test_alerts.py  test_approval_cli.py  test_approval_notifier.py  test_approval_sdk.py  test_approval_store.py  test_audit.py  test_aws_actions.py  test_aws_executor.py  test_cli.py  test_cluster_integration.py  test_config.py  test_credential_cli.py  test_credential_models.py  test_credential_resolver.py  test_credential_sdk.py  test_credential_vault.py  test_cumulative_risk.py  test_dashboard_api.py  test_dashboard_auth.py  test_dashboard_clusters.py  test_dashboard_db.py  test_dashboard_reports.py  test_dashboard_services.py  test_dashboard_shipper.py  test_dashboard_tier.py  test_delegation.py  test_edge_cases.py  test_identity.py  test_inventory.py  test_k8s_executor.py  test_managed_policies.py  test_models.py  test_pdp.py  test_policy_sync.py  test_policy_testing.py  test_ratelimit.py  test_registry.py  test_rollback.py  test_runner.py  test_runner_cli.py  (+7 more)
tests/integration/: conftest.py  test_aws_executor.py  test_full_pipeline.py  test_k8s_executor.py  test_subprocess_executor.py
tests/policy_tests/: test_default_policies.yaml
